Revert "refactored rules for valid combos into a helper file, added hooks for activePlayers and currentPlayer, reduced visible playable cards to only the current player's hand, added logic for whether card combo selection is valid and for determiming next player, built 'pass' feature to allow players to choose not to play, fixed bug with dealHand function"
This reverts commit 8af73e9dbe2a17a0016f17ff9268f88e9c9329d9.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none;
-}
-
 .cards {
   overflow-x: scroll;
   min-height: 300px;
